--- a/foodOrderWebApp/src/main/resources/templates/contact.html
+++ b/foodOrderWebApp/src/main/resources/templates/contact.html
@@ -19,6 +19,9 @@
   <!--Fontawesome CDN-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap');
+  </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -57,7 +60,7 @@
           </div>
           <div sec:authorize="isAuthenticated()">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+              <a class="nav-link" th:href="@{/shoppingCart}"><i class="fas fa-shopping-cart"></i></a>
             </li>
           </div>
           <div sec:authorize="hasAuthority('ADMIN')">
