--- a/foodOrderWebApp/src/main/resources/templates/item_added.html
+++ b/foodOrderWebApp/src/main/resources/templates/item_added.html
@@ -18,7 +18,9 @@
 
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap');
+    </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -57,7 +59,7 @@
                     </div>
                     <div sec:authorize="isAuthenticated()">
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+                            <a class="nav-link" th:href="@{/shoppingCart}"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </div>
 
@@ -85,7 +87,7 @@
     </nav>
 </header>
 
-<main class="container" style="margin-top: 200px">
+<main class="container" style="margin-top: 60px">
 
     <div class="d-flex justify-content-center text-success text-capitalize">
         <h4> Food Item Added Successfully!</h4>
@@ -97,7 +99,7 @@
                     <h3>Please Click Below To View The Item List</h3>
                 </div>
                 <div class="card-body text-center" >
-                    <a th:href="@{/console/itemlist}">Link for Item List</a>
+                    <a class="btn btn-primary" th:href="@{/console/itemlist}">Link for Item List</a>
                 </div>
             </div>
         </div>
