--- a/foodOrderWebApp/src/main/resources/templates/menu.html
+++ b/foodOrderWebApp/src/main/resources/templates/menu.html
@@ -18,7 +18,9 @@
 
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap');
+    </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -57,7 +59,7 @@
                     </div>
                     <div sec:authorize="isAuthenticated()">
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+                            <a class="nav-link" th:href="@{/shoppingCart}"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </div>
 
@@ -90,7 +92,7 @@
     </nav>
 </header>
 
-<main class="container" style="margin-top: 100px">
+<main class="container" style="margin-top: 60px">
                 <div>
                     <h3 style="text-align: center">Menu</h3>
                 </div>
@@ -112,7 +114,7 @@
                             <td th:text="${foodItem.itemDescription}">Description</td>
                             <td th:text="${foodItem.itemPrice}">Price</td>
                             <td>
-                                <a th:href="@{/shoppingCart/addItem/{id}(id=${foodItem.itemId})}">Add To Cart</a>
+                                <a class="btn btn-primary" th:href="@{/shoppingCart/addItem/{id}(id=${foodItem.itemId})}">Add To Cart</a>
                             </td>
                         </tr>
                         </tbody>
