--- a/foodOrderWebApp/src/main/resources/templates/shoppingCart.html
+++ b/foodOrderWebApp/src/main/resources/templates/shoppingCart.html
@@ -18,7 +18,9 @@
 
   <!--Fontawesome CDN-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap');
+  </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -57,7 +59,7 @@
           </div>
           <div sec:authorize="isAuthenticated()">
             <li class="nav-item">
-              <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+              <a class="nav-link" th:href="@{/shoppingCart}"><i class="fas fa-shopping-cart"></i></a>
             </li>
           </div>
 
@@ -92,7 +94,7 @@
 
 
 
-<main class="container" style="margin-top: 100px">
+<main class="container" style="margin-top: 60px">
   <div>
     <h3 style="text-align: center">Shopping Cart</h3>
   </div>
