--- a/foodOrderWebApp/src/main/resources/templates/users.html
+++ b/foodOrderWebApp/src/main/resources/templates/users.html
@@ -18,7 +18,9 @@
 
     <!--Fontawesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap');
+    </style>
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -57,7 +59,7 @@
                     </div>
                     <div sec:authorize="isAuthenticated()">
                         <li class="nav-item">
-                            <a class="nav-link" th:href="@{/shoppingCart}">Cart</a>
+                            <a class="nav-link" th:href="@{/shoppingCart}"><i class="fas fa-shopping-cart"></i></a>
                         </li>
                     </div>
 
@@ -85,7 +87,7 @@
     </nav>
 </header>
 
-<main class="container" style="margin-top: 200px">
+<main class="container" style="margin-top: 60px">
                     <div class="text-center">
                         <h3>Users</h3>
                     </div>
@@ -109,7 +111,7 @@
                                 <td th:text="${user.email}">E-mail</td>
                                 <td th:text="${user.roles}">Role</td>
                                 <td>
-                                    <a th:href="@{/console/deleteUser/{id}(id=${user.userId})}">Delete</a>
+                                    <a class="btn btn-danger" th:href="@{/console/deleteUser/{id}(id=${user.userId})}">Delete</a>
                                 </td>
                             </tr>
                             </tbody>
